--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <title>Document</title>
 
-    <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="css/layout.css">
     <!--script src=""></script-->
 </head>
 
