--- a/index.html
+++ b/index.html
@@ -12,12 +12,67 @@
 
     <title>Document</title>
 
+    <link rel="stylesheet" href="/aaa/css/reset.css">
     <link rel="stylesheet" href="/aaa/css/layout.css">
     <!--script src=""></script-->
 </head>
 
 <body>
-    <h1>AAA</h1>
+    <!--header-->
+    <header id="header">
+        <div class="inner">
+            <h1 class="h-logo">
+                <a href="/">LOGO</a>
+            </h1>
+        </div>
+    </header>
+    <!--//header-->
+
+    <!--contents-->
+    <div id="contents">
+        <div class="inner">
+            <div class="tab-box">
+                <input type="radio" id="tab1" name="tab-btn" checked="checked" />	
+                <a href="#tabDetail1">TAB 1</a>
+
+                <input type="radio" id="tab2" name="tab-btn" />	
+                <a href="#tabDetail2">TAB 2</a>
+
+                <input type="radio" id="tab3" name="tab-btn" />	
+                <a href="#tabDetail3">TAB 3</a>
+
+                <input type="radio" id="tab4" name="tab-btn" />	
+                <a href="#tabDetail4">TAB 4</a>
+
+                <div class="tab-area__detail">
+                    <div id="tabDetail1" class="tab-detail">
+                        <h2>TAB 1</h2>
+                    </div>
+                    
+                    <div id="tabDetail2" class="tab-detail">
+                        <h2>TAB 2</h2>
+                    </div>
+
+                    <div id="tabDetail3" class="tab-detail">
+                        <h2>TAB 3</h2>
+                    </div>
+
+                    <div id="tabDetail4" class="tab-detail">
+                        <h2>TAB 4</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--//contents-->
+
+    <!--footer-->
+    <footer id="footer">
+        <div class="inner">
+            
+        </div>
+    </footer>
+    <!--//footer-->
 </body>
 
 </html>
