--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <!--header-->
-    <header id="header">
+    <header id="header" style="display:none;">
         <div class="inner">
             <h1 class="h-logo">
                 <a href="/">LOGO</a>
@@ -46,7 +46,150 @@
 
                 <div class="tab-area__detail">
                     <div id="tabDetail1" class="tab-detail">
-                        <h2>TAB 1</h2>
+                        <div class="member-box">
+                            <ul>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">1</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">2</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">3</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">4</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">5</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">7</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">8</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">9</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">10</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">11</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>     
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">12</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">13</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">17</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">18</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">21</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">25</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">30</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">73</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">89</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="photo"><img src="" alt="" /></div>
+                                    <div class="txt-box">
+                                        <p class="num">99</p>
+                                        <p class="name"></p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                     
                     <div id="tabDetail2" class="tab-detail">
