--- a/index.html
+++ b/index.html
@@ -193,7 +193,114 @@
                     </div>
                     
                     <div id="tabDetail2" class="tab-detail">
-                        <h2>TAB 2</h2>
+                        <div class="table-box">
+                            <table class="table--outer">				
+                                <tr>
+                                    <td>
+                                        <table class="table--fix">
+                                            <tr>
+                                                <th></th>
+                                            </tr>
+                                            <tr>
+                                                <th>고정01</th>							
+                                            </tr>
+                                            <tr>
+                                                <th>고정02</th>
+                                            </tr>
+                                            <tr>
+                                                <th>고정03</th>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                    <td>
+                                        <div class="scrollbox">
+                                            <table>
+                                                <tr>
+                                                    <td>001</td>
+                                                    <td>002</td>
+                                                    <td>003</td>
+                                                    <td>004</td>
+                                                    <td>005</td>
+                                                    <td>006</td>
+                                                    <td>007</td>
+                                                    <td>008</td>
+                                                    <td>009</td>
+                                                    <td>010</td>
+                                                    <td>011</td>
+                                                    <td>012</td>
+                                                    <td>013</td>
+                                                    <td>014</td>
+                                                    <td>015</td>
+                                                    <td>016</td>
+                                                    <td>017</td>
+                                                    <td>018</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>AAA</td>
+                                                    <td>BBB</td>
+                                                    <td>CCC</td>
+                                                    <td>AAA</td>
+                                                    <td>BBB</td>
+                                                    <td>CCCCC</td>
+                                                    <td>AAA</td>
+                                                    <td>BBB</td>
+                                                    <td>CCC</td>
+                                                    <td>AAAAA</td>
+                                                    <td>BBB</td>
+                                                    <td>CCC</td>
+                                                    <td>AAA</td>
+                                                    <td>BBB</td>
+                                                    <td>CCC</td>
+                                                    <td>AAA</td>
+                                                    <td>BBB</td>
+                                                    <td>CCC</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>AAA</td>
+                                                    <td>BBB</td>
+                                                    <td>CCC</td>
+                                                    <td>AAA</td>
+                                                    <td>BBB</td>
+                                                    <td>CCC</td>
+                                                    <td>AAA</td>
+                                                    <td>BBB</td>
+                                                    <td>CCC</td>
+                                                    <td>AAA</td>
+                                                    <td>BBBBB</td>
+                                                    <td>CCC</td>
+                                                    <td>AAA</td>
+                                                    <td>BBB</td>
+                                                    <td>CCC</td>
+                                                    <td>AAA</td>
+                                                    <td>BBBBB</td>
+                                                    <td>CCC</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>AAA</td>
+                                                    <td>BBB</td>
+                                                    <td>CCC</td>
+                                                    <td>AAA</td>
+                                                    <td>BBB</td>
+                                                    <td>CCC</td>
+                                                    <td>AAA</td>
+                                                    <td>BBB</td>
+                                                    <td>CCC</td>
+                                                    <td>AAA</td>
+                                                    <td>BBBBB</td>
+                                                    <td>CCC</td>
+                                                    <td>AAA</td>
+                                                    <td>BBB</td>
+                                                    <td>CCCCC</td>
+                                                    <td>AAA</td>
+                                                    <td>BBB</td>
+                                                    <td>CCC</td>
+                                                </tr>
+                                            </table>
+                                        </div>
+                                    </td>
+                                </tr>				
+                            </table>
+                        </div>
                     </div>
 
                     <div id="tabDetail3" class="tab-detail">
