--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <div class="table-box">
                             <table class="table--outer">				
                                 <tr>
-                                    <td>
+                                    <td class="vat">
                                         <table class="table--fix">
                                             <tr>
                                                 <th></th>
