--- a/index.html
+++ b/index.html
@@ -46,6 +46,61 @@
 
                 <div class="tab-area__detail">
                     <div id="tabDetail1" class="tab-detail">
+                        <div class="table-box">
+                            <table class="table--outer">				
+                                <tr>
+                                    <td class="vat">
+                                        <table class="table--fix">
+                                            <tr>
+                                                <th>2018년</th>
+                                            </tr>
+                                            <tr>
+                                                <th>고정01</th>							
+                                            </tr>
+                                            <tr>
+                                                <th>고정02</th>
+                                            </tr>
+                                            <tr>
+                                                <th>고정03</th>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                    <td>
+                                        <div class="scrollbox">
+                                            <table>
+                                                <tr>
+                                                    <td colspan="5">12월</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>2</td>
+                                                    <td>9</td>
+                                                    <td>16</td>
+                                                    <td>23</td>
+                                                    <td>30</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>2</td>
+                                                    <td>9</td>
+                                                    <td>16</td>
+                                                    <td>23</td>
+                                                    <td>30</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>2</td>
+                                                    <td>9</td>
+                                                    <td>16</td>
+                                                    <td>23</td>
+                                                    <td>30</td>
+                                                </tr>
+                                            </table>
+                                        </div>
+                                    </td>
+                                </tr>				
+                            </table>
+                        </div>
+                    </div>
+                    
+                    <div id="tabDetail2" class="tab-detail">
                         <div class="member-box">
                             <ul>
                                 <li>
@@ -189,117 +244,6 @@
                                     </div>
                                 </li>
                             </ul>
-                        </div>
-                    </div>
-                    
-                    <div id="tabDetail2" class="tab-detail">
-                        <div class="table-box">
-                            <table class="table--outer">				
-                                <tr>
-                                    <td class="vat">
-                                        <table class="table--fix">
-                                            <tr>
-                                                <th></th>
-                                            </tr>
-                                            <tr>
-                                                <th>고정01</th>							
-                                            </tr>
-                                            <tr>
-                                                <th>고정02</th>
-                                            </tr>
-                                            <tr>
-                                                <th>고정03</th>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                    <td>
-                                        <div class="scrollbox">
-                                            <table>
-                                                <tr>
-                                                    <td>001</td>
-                                                    <td>002</td>
-                                                    <td>003</td>
-                                                    <td>004</td>
-                                                    <td>005</td>
-                                                    <td>006</td>
-                                                    <td>007</td>
-                                                    <td>008</td>
-                                                    <td>009</td>
-                                                    <td>010</td>
-                                                    <td>011</td>
-                                                    <td>012</td>
-                                                    <td>013</td>
-                                                    <td>014</td>
-                                                    <td>015</td>
-                                                    <td>016</td>
-                                                    <td>017</td>
-                                                    <td>018</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>AAA</td>
-                                                    <td>BBB</td>
-                                                    <td>CCC</td>
-                                                    <td>AAA</td>
-                                                    <td>BBB</td>
-                                                    <td>CCCCC</td>
-                                                    <td>AAA</td>
-                                                    <td>BBB</td>
-                                                    <td>CCC</td>
-                                                    <td>AAAAA</td>
-                                                    <td>BBB</td>
-                                                    <td>CCC</td>
-                                                    <td>AAA</td>
-                                                    <td>BBB</td>
-                                                    <td>CCC</td>
-                                                    <td>AAA</td>
-                                                    <td>BBB</td>
-                                                    <td>CCC</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>AAA</td>
-                                                    <td>BBB</td>
-                                                    <td>CCC</td>
-                                                    <td>AAA</td>
-                                                    <td>BBB</td>
-                                                    <td>CCC</td>
-                                                    <td>AAA</td>
-                                                    <td>BBB</td>
-                                                    <td>CCC</td>
-                                                    <td>AAA</td>
-                                                    <td>BBBBB</td>
-                                                    <td>CCC</td>
-                                                    <td>AAA</td>
-                                                    <td>BBB</td>
-                                                    <td>CCC</td>
-                                                    <td>AAA</td>
-                                                    <td>BBBBB</td>
-                                                    <td>CCC</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>AAA</td>
-                                                    <td>BBB</td>
-                                                    <td>CCC</td>
-                                                    <td>AAA</td>
-                                                    <td>BBB</td>
-                                                    <td>CCC</td>
-                                                    <td>AAA</td>
-                                                    <td>BBB</td>
-                                                    <td>CCC</td>
-                                                    <td>AAA</td>
-                                                    <td>BBBBB</td>
-                                                    <td>CCC</td>
-                                                    <td>AAA</td>
-                                                    <td>BBB</td>
-                                                    <td>CCCCC</td>
-                                                    <td>AAA</td>
-                                                    <td>BBB</td>
-                                                    <td>CCC</td>
-                                                </tr>
-                                            </table>
-                                        </div>
-                                    </td>
-                                </tr>				
-                            </table>
                         </div>
                     </div>
 
