--- a/index.html
+++ b/index.html
@@ -72,8 +72,12 @@
                                                     <td colspan="5">12월</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>2</td>
-                                                    <td>9</td>
+                                                    <!--
+                                                        att : O,
+                                                        abs : X,
+                                                    -->
+                                                    <td class="att">2</td>
+                                                    <td class="abs">9</td>
                                                     <td>16</td>
                                                     <td>23</td>
                                                     <td>30</td>
