--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <td class="vat">
                         <table class="table--fix">
                             <tr>
-                                <th>2018년</th>
+                                <th rowspan="2">2018년</th>
                             </tr>
                             <tr>
                                 <th>고정01</th>							
@@ -54,32 +54,39 @@
                         <div class="scrollbox">
                             <table>
                                 <tr>
-                                    <td colspan="5">12월</td>
+                                    <td colspan="5">12월</td>                                    
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>9</td>
+                                    <td>16</td>
+                                    <td>23</td>
+                                    <td>30</td>
                                 </tr>
                                 <tr>
                                     <!--
                                         att : O,
                                         abs : X,
                                     -->
-                                    <td class="att">2</td>
-                                    <td class="abs">9</td>
-                                    <td>16</td>
-                                    <td>23</td>
-                                    <td>30</td>
+                                    <td class="att"></td>
+                                    <td class="abs"></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>                                
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
                                 </tr>
                                 <tr>
-                                    <td>2</td>
-                                    <td>9</td>
-                                    <td>16</td>
-                                    <td>23</td>
-                                    <td>30</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>9</td>
-                                    <td>16</td>
-                                    <td>23</td>
-                                    <td>30</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
                                 </tr>
                             </table>
                         </div>
