--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <td class="vat">
                         <table class="table--fix">
                             <tr>
-                                <th rowspan="2">2018년</th>
+                                <th>2018년</th>
                             </tr>
                             <tr>
                                 <th>고정01</th>							
@@ -54,7 +54,7 @@
                         <div class="scrollbox">
                             <table>
                                 <tr>
-                                    <td colspan="5">12월</td>                                    
+                                    <td colspan="5" colspan="2">12월</td>                                    
                                 </tr>
                                 <tr>
                                     <td>2</td>
