--- a/index.html
+++ b/index.html
@@ -68,18 +68,18 @@
                                     <td>30</td>
                                 </tr>
                                 <tr>                                    
-                                    <td class="att"></td>
-                                    <td class="abs"></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td class="att">2</td>
+                                    <td class="abs">9</td>
+                                    <td>16</td>
+                                    <td>23</td>
+                                    <td>30</td>
                                 </tr>                                
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td>2</td>
+                                    <td>9</td>
+                                    <td>16</td>
+                                    <td>23</td>
+                                    <td>30</td>
                                 </tr>
                             </table>
                         </div>
