--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                         att : O,
                                         abs : X,
                                     -->
-                                    <td>2</td>
+                                    <td class="att">2</td>
                                     <td>9</td>
                                     <td>16</td>
                                     <td>23</td>
@@ -69,7 +69,7 @@
                                 </tr>
                                 <tr>                                    
                                     <td class="att">2</td>
-                                    <td class="abs">9</td>
+                                    <td class="">9</td>
                                     <td>16</td>
                                     <td>23</td>
                                     <td>30</td>
