--- a/index.html
+++ b/index.html
@@ -30,7 +30,23 @@
 
     <!--contents-->
     <div id="contents">
-        <div class="table-box">
+        <div class="timer-box">
+            <div id="num0" class="num">
+                <span class="n1"></span>
+                <span class="n2"></span>
+                <span class="n3"></span>
+                <span class="n4"></span>
+                <span class="n5"></span>
+                <span class="n6"></span>
+                <span class="n7"></span>
+            </div>
+        </div>
+
+        
+
+
+
+        <div class="table-box" style="display: none;">
             <p>○ : 참석, X : 불참</p>
             <table class="table--outer">				
                 <tr>
