--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="/aaa/css/reset.css">
     <link rel="stylesheet" href="/aaa/css/layout.css">
+    <link rel="stylesheet" href="/aaa/css/timer.css">
     <!--script src=""></script-->
 </head>
 
@@ -41,7 +42,6 @@
                 <span class="n7"></span>
             </div>
         </div>
-
         
 
 
