--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 
     <title>AAA</title>
 
+    <script src="/aaa/js/timer.js"></script>
+
     <link rel="stylesheet" href="/aaa/css/reset.css">
     <link rel="stylesheet" href="/aaa/css/layout.css">
     <link rel="stylesheet" href="/aaa/css/timer.css">
+
+    
     <!--script src=""></script-->
 </head>
 
@@ -32,7 +36,7 @@
     <!--contents-->
     <div id="contents">
         <div class="timer-box">
-            <div id="num0" class="num">
+            <div id="num" class="num0">
                 <span class="n1"></span>
                 <span class="n2"></span>
                 <span class="n3"></span>
