--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     <!--contents-->
     <div id="contents">
-        <div class="timer-box">
-            <div id="num" class="num0">
+        <div class="timer-box__seconds">
+            <div id="numA" class="num0">
                 <span class="n1"></span>
                 <span class="n2"></span>
                 <span class="n3"></span>
@@ -45,6 +45,15 @@
                 <span class="n6"></span>
                 <span class="n7"></span>
             </div>
+            <div id="numB" class="num0">
+                    <span class="n1"></span>
+                    <span class="n2"></span>
+                    <span class="n3"></span>
+                    <span class="n4"></span>
+                    <span class="n5"></span>
+                    <span class="n6"></span>
+                    <span class="n7"></span>
+                </div>
         </div>
         
 
