--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 
     <!--contents-->
     <div id="contents">
-        <div class="timer-box__seconds">
-            
+        <div class="timer-box">            
             <div id="numA" class="num0">
                 <span class="n1"></span>
                 <span class="n2"></span>
@@ -57,6 +56,7 @@
             </div>
         </div>
         
+        <div id="timer"></div>
 
 
 
