--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!--contents-->
     <div id="contents">
-        <div class="timer-box">            
+        <div class="timer-box">   
             <div id="numA" class="num0">
                 <span class="n1"></span>
                 <span class="n2"></span>
@@ -54,69 +54,61 @@
                 <span class="n6"></span>
                 <span class="n7"></span>
             </div>
-        </div>
-        
-        <div id="timer"></div>
-
-
-
-        <div class="table-box" style="display: none;">
-            <p>○ : 참석, X : 불참</p>
-            <table class="table--outer">				
-                <tr>
-                    <td class="vat">
-                        <table class="table--fix">
-                            <tr>
-                                <th>2018년</th>
-                            </tr>
-                            <tr>
-                                <th>고정01</th>							
-                            </tr>
-                            <tr>
-                                <th>고정02</th>
-                            </tr>
-                            <tr>
-                                <th>고정03</th>
-                            </tr>
-                        </table>
-                    </td>
-                    <td>
-                        <div class="scrollbox">
-                            <table>
-                                <tr>
-                                    <td colspan="5">12월</td>                                    
-                                </tr>
-                                <tr>
-                                    <!--
-                                        att : O,
-                                        abs : X,
-                                    -->
-                                    <td class="att">2</td>
-                                    <td>9</td>
-                                    <td>16</td>
-                                    <td>23</td>
-                                    <td>30</td>
-                                </tr>
-                                <tr>                                    
-                                    <td class="att">2</td>
-                                    <td class="">9</td>
-                                    <td>16</td>
-                                    <td>23</td>
-                                    <td>30</td>
-                                </tr>                                
-                                <tr>
-                                    <td>2</td>
-                                    <td>9</td>
-                                    <td>16</td>
-                                    <td>23</td>
-                                    <td>30</td>
-                                </tr>
-                            </table>
-                        </div>
-                    </td>
-                </tr>				
-            </table>
-        </div>
+            <div id="numA" class="num0">
+                <span class="n1"></span>
+                <span class="n2"></span>
+                <span class="n3"></span>
+                <span class="n4"></span>
+                <span class="n5"></span>
+                <span class="n6"></span>
+                <span class="n7"></span>
+            </div>
+            <div id="numB" class="num0">
+                <span class="n1"></span>
+                <span class="n2"></span>
+                <span class="n3"></span>
+                <span class="n4"></span>
+                <span class="n5"></span>
+                <span class="n6"></span>
+                <span class="n7"></span>
+            </div>
+            <div id="numA" class="num0">
+                <span class="n1"></span>
+                <span class="n2"></span>
+                <span class="n3"></span>
+                <span class="n4"></span>
+                <span class="n5"></span>
+                <span class="n6"></span>
+                <span class="n7"></span>
+            </div>
+            <div id="numB" class="num0">
+                <span class="n1"></span>
+                <span class="n2"></span>
+                <span class="n3"></span>
+                <span class="n4"></span>
+                <span class="n5"></span>
+                <span class="n6"></span>
+                <span class="n7"></span>
+            </div>         
+            <div id="numA" class="num0">
+                <span class="n1"></span>
+                <span class="n2"></span>
+                <span class="n3"></span>
+                <span class="n4"></span>
+                <span class="n5"></span>
+                <span class="n6"></span>
+                <span class="n7"></span>
+            </div>
+            <div id="numB" class="num0">
+                <span class="n1"></span>
+                <span class="n2"></span>
+                <span class="n3"></span>
+                <span class="n4"></span>
+                <span class="n5"></span>
+                <span class="n6"></span>
+                <span class="n7"></span>
+            </div>
+        </div>        
     </div>
     <!--//contents-->
 
