--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
                 <span class="n6"></span>
                 <span class="n7"></span>
             </div>
+
+            <div class="dot">
+                <span class="d1"></span>
+                <span class="d2"></span>
+            </div>
+
             <div id="numA" class="num0">
                 <span class="n1"></span>
                 <span class="n2"></span>
@@ -72,6 +78,12 @@
                 <span class="n6"></span>
                 <span class="n7"></span>
             </div>
+
+            <div class="dot">
+                <span class="d1"></span>
+                <span class="d2"></span>
+            </div>
+            
             <div id="numA" class="num0">
                 <span class="n1"></span>
                 <span class="n2"></span>
