--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!--contents-->
     <div id="contents">
         <div class="timer-box">   
-            <div id="numA" class="num0">
+            <div id="numHA" class="num0">
                 <span class="n1"></span>
                 <span class="n2"></span>
                 <span class="n3"></span>
@@ -44,31 +44,7 @@
                 <span class="n6"></span>
                 <span class="n7"></span>
             </div>
-            <div id="numB" class="num0">
-                <span class="n1"></span>
-                <span class="n2"></span>
-                <span class="n3"></span>
-                <span class="n4"></span>
-                <span class="n5"></span>
-                <span class="n6"></span>
-                <span class="n7"></span>
-            </div>
-
-            <div class="dot">
-                <span class="d1"></span>
-                <span class="d2"></span>
-            </div>
-
-            <div id="numA" class="num0">
-                <span class="n1"></span>
-                <span class="n2"></span>
-                <span class="n3"></span>
-                <span class="n4"></span>
-                <span class="n5"></span>
-                <span class="n6"></span>
-                <span class="n7"></span>
-            </div>
-            <div id="numB" class="num0">
+            <div id="numHB" class="num0">
                 <span class="n1"></span>
                 <span class="n2"></span>
                 <span class="n3"></span>
@@ -83,7 +59,7 @@
                 <span class="d2"></span>
             </div>
 
-            <div id="numA" class="num0">
+            <div id="numMA" class="num0">
                 <span class="n1"></span>
                 <span class="n2"></span>
                 <span class="n3"></span>
@@ -92,7 +68,31 @@
                 <span class="n6"></span>
                 <span class="n7"></span>
             </div>
-            <div id="numB" class="num0">
+            <div id="numMB" class="num0">
+                <span class="n1"></span>
+                <span class="n2"></span>
+                <span class="n3"></span>
+                <span class="n4"></span>
+                <span class="n5"></span>
+                <span class="n6"></span>
+                <span class="n7"></span>
+            </div>
+
+            <div class="dot">
+                <span class="d1"></span>
+                <span class="d2"></span>
+            </div>
+
+            <div id="numSA" class="num0">
+                <span class="n1"></span>
+                <span class="n2"></span>
+                <span class="n3"></span>
+                <span class="n4"></span>
+                <span class="n5"></span>
+                <span class="n6"></span>
+                <span class="n7"></span>
+            </div>
+            <div id="numSB" class="num0">
                 <span class="n1"></span>
                 <span class="n2"></span>
                 <span class="n3"></span>
